localStorage and Event Delegation added

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background: url('http://wes.io/hx9M/oh-la-la.jpg') center no-repeat;
+  background: url('https://images.pexels.com/photos/6267/menu-restaurant-vintage-table.jpg?cs=srgb&dl=table-in-vintage-restaurant-6267.jpg&fm=jpg') center no-repeat;
   background-size: cover;
   min-height: 100vh;
   display: flex;
